@@ -10,6 +10,7 @@
  * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
  * Move included files to lib from portal (#1207)
  * Include link to NYU Poly WITest wireless site. (#773)
+ * Exclude users with no public SSH keys from the generated omni_config. (#1215)
 
 == 2.21.4 ==
  * Lowercase eppn before lookup in speaks-for flow (#1209)
